--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ h3{
 .button:hover,
 .button:active{
     background-color:#404BBF;
+    color: #ffffff;
 }
 a{
     font-size:12px;
@@ -130,6 +131,10 @@ footer{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+}
+
+.section-3{
+    background-color: #FFFFFF;
 }
 
 .section3-ul li .h33{
