--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ body{
 }
 
 .our-team{
-    background-color: #F4F4FD;
+    background-color: #FFFFFF;
 }
 .section-header{
     font-size: 36px;
@@ -77,7 +77,7 @@ body{
 .hero{
     background-color: #2E2F42;
 }
-.h1-header{
+.hero-header{
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
@@ -103,12 +103,8 @@ body{
     color: #434455;
 }
 
-.section-3{
+.section-4{
     background-color: #ffffff;
-}
-
-.footer-section{
-    background-color: #2E2F42;
 }
 .footer{
     background-color: #2E2F42;
